fix hiver bug; fix hint z-index bug; get output-header-visibility-fix back

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -18,7 +18,7 @@ $color-info: #96a5be;
 
 $border-color: rgba($color-text, 0.05);
 
-$header-color: $color-text;
+$header-color: rgba($color-text, 0.97);
 $header-height: 56px;
 $header-padding-side: 15px;
 
